# jsockd

./: .gitignore  .tool-versions  LICENSE  Readme.md  TODO.md  build_quickjs.sh  ci.sh  draft-win-patch  example_module.mjs  fakecl.sh  fil-c-quickjs.patch  openbsd-quickjs.patch  package-lock.json  quickjs-all-build-patch.patch  quickjs-debug-build-patch.patch  quickjs-patch.patch  quickjs-release-build-patch.patch
.github/workflows/: github-actions.yaml
clients/elixir/example_app/: .gitignore  README.md  bundle.sh  mix.exs  public_signing_key
clients/elixir/example_app/config/: config.exs
clients/elixir/example_app/priv/: example_module.qjsbc
clients/elixir/jsockd_client/: .gitignore  README.md  mix.exs
clients/elixir/jsockd_client/lib/: jsockd_client.ex
clients/elixir/jsockd_client/lib/jsockd_client/: application.ex  js_server_manager.ex  jsockd_client.ex
clients/elixir/jsockd_client/test/: jsockd_client_test.exs
clients/go/: config.go  go.mod  jsockd.go  jsockd_test.go
clients/go/jsockdclient/: Readme.md  config.go  getjsockd.go  go.mod  jsockd.go  jsockd_test.go
clients/python/jsockdclient/: LICENSE  Readme.md  pyproject.toml  ruff.toml
clients/python/jsockdclient/src/jsockdclient/: __init__.py  py.typed
clients/python/jsockdclient/tests/: __init__.py  test_jsockdclient.py
docs/: freebsd_build_instructions.md  openbsd_build_instructions.md  signing_with_openssl.md  ssr_with_react_19.md
docs/ssr_with_react_19_example_code/: .gitignore  Readme.md  client.jsx  counter.jsx  go.mod  main.go  package-lock.json  package.json  run.sh  server.jsx
js_server/: .clangd  CMakeLists.txt  TC-gcc-arm64.cmake  TC-oa64.cmake  format.sh  mk.sh  package-lock.json  package.json
js_server/src/: cmdargs.c  cmdargs.h  config.h  custom_module_loader.c  custom_module_loader.h  hash_cache.c  hash_cache.h  hex.c  hex.h  line_buf.c  line_buf.h  main.c  mmap_file.c  mmap_file.h  utils.c  utils.h  verify_bytecode.h  wait_group.c  wait_group.h  writejsonstring.c  writejsonstring.h
js_server/src/js/: backtrace.mjs  shims.mjs
js_server/src/lib/ed25519/: seed.c
js_server/tests/e2e/: filc_relative_bench.sh  memory_increase_detection.sh  relative_bench.sh  zero_exit_code_on_quit_command.sh
js_server/tests/e2e/filc_relative_bench/: shims.mjs
js_server/tests/e2e/sourcemaps/: a.mjs  b.mjs  package.json  todo_not_yet_a_test.sh
js_server/tests/fuzz/: fuzz.sh
js_server/tests/unit/: tests.c
js_server/tests/unit/lib/: acutest.h  pcg.c  pcg.h
js_server/tests/valgrind/: gen_test_cases.sh  run.sh
jsockd_server/: CMakeLists.txt  TC-fil-c-CI.cmake  TC-fil-c.cmake  TC-oa64.cmake  mk.sh  package-lock.json  package.json
jsockd_server/src/: alloc.c  alloc.h  backtrace.c  backtrace.h  cmdargs.c  cmdargs.h  config.h  console.c  console.h  custom_module_loader.c  fchmod.h  globals.c  globals.h  hash_cache.c  hash_cache.h  hex.c  hex.h  line_buf.c  line_buf.h  log.c  log.h  main.c  messages.c  messages.h  mmap_file.c  mmap_file.h  modcompiler.c  modcompiler.h  textencodedecode.c  textencodedecode.h  threadstate.c  threadstate.h  typeofshim.h  utils.c  utils.h  verify_bytecode.c  verify_bytecode.h  version.h  wait_group.c  wait_group.h
jsockd_server/src/js/: backtrace.mjs  backtrace.test.mjs  shims.mjs
jsockd_server/src/js/shims/: package-lock.json  package.json  shims.mjs  textencoder.mjs  web-streams-polyfill.js
jsockd_server/src/lib/ed25519/: Readme.md  seed.c
jsockd_server/tests/e2e/: console.sh  fuzz.sh  memory_increase_detection.sh  relative_bench.sh  zero_exit_code_on_quit_command.sh
jsockd_server/tests/e2e/relative_bench/: bench.jsx
jsockd_server/tests/e2e/sourcemaps/: .gitignore  m.mjs  todo_not_yet_a_test.sh
jsockd_server/tests/fuzz/: fuzz.sh
jsockd_server/tests/go/: go.mod  main.go
jsockd_server/tests/unit/: tests.c
jsockd_server/tests/valgrind/: gen_test_cases.sh  run.sh
jsockd_server/tests/valgrind_eval/: run.sh
jsockd_server/tests/valgrind_server/: bundle.mjs  bundle.mjs.map  gen_test_cases.sh  run.sh
readable-streams-test/: buildandrun.sh  bundle.mjs  bundle.mjs.map  package-lock.json  package.json  streamsrender.mjs
scripts/: Readme.md  eval.sh
win-build-utils/: builtins.h  fakear.sh  fakecl.sh  shims.h
