[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "jsockdclient"
version = "0.1.0"
description = "Python client for JSockD (QuickJS socket daemon), inspired by the Go client."
license = { text = "MIT" }
readme = "Readme.md"
requires-python = ">=3.10"
keywords = ["jsockd", "quickjs", "sockets", "rpc", "ipc"]
authors = [
  { name = "Alex Drummond" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Networking",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "pynacl>=1.5",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.1", "ruff>=0.5.0", "mypy>=1.10.0", "types-requests>=2.31.0.10"]

[project.urls]
Homepage = "https://github.com/addrummond/jsockd"
Repository = "https://github.com/addrummond/jsockd"
Issues = "https://github.com/addrummond/jsockd/issues"
